# plaid-rust

./: Cargo.toml
src/: accounts.rs  assets.rs  auth.rs  categories.rs  environments.rs  errors.rs  holdings.rs  identities.rs  incomes.rs  institutions.rs  investment_transactions.rs  items.rs  liabilities.rs  lib.rs  plaid.rs  processors.rs  sandbox.rs  transactions.rs
