[package]
name = "plaid-rust"
version = "0.0.1"
authors = ["Zachary Kuhn <zachary@zacharykuhn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
reqwest = "0.9.19"
serde = "1.0.97"
serde_json = "1.0.40"
